# VideoTrans-Common

./: .gitignore  README.md  pyproject.toml  主流 AI 模型多语言支持对比.md  音频与视频时长伸缩参数说明.md
src/Common/: __init__.py  asr_languages.py  config.py  language_map.py  tts_languages.py
src/Common/video_utils/: __init__.py  clip_ops.py  ffmpeg_ops.py  merge.py  probe.py  sync.py
